fix:z-index調整

--- a/css/column.css
+++ b/css/column.css
@@ -35,7 +35,7 @@ header{
     position: fixed;
     /* top: 0; */
     width: 100vw;
-    z-index: 1;
+    z-index: 999;
 }
 
 .nav-wrapper {
@@ -217,7 +217,8 @@ h2{
 }
 
 /*画像配置*/
-.content img{
+
+.columnImage{
     position: absolute;
     z-index: 2;
 }
@@ -274,6 +275,8 @@ h2{
     left : 0;
     
     width: 236px;
+
+    z-index: 800;
 }
 
 .back_button:hover{
