--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,7 @@ header{
     position: fixed;
     /* top: 0; */
     width: 100vw;
-    z-index: 1;
+    z-index: 999;
 }
 
 .nav-wrapper {
